# bevy-open-world

./: .gitignore  CREDITS.md  Cargo.toml  README.md  index.html
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/osm/: 1349.pbf  169.pbf  2700.pbf  3212.pbf
assets/shaders/: atmosphere.wgsl  clouds.wgsl  clouds_compute.wgsl  earth.wgsl  planet.wgsl  terrain.wgsl
crates/bevy-adsb/: Cargo.toml
crates/bevy-adsb/clickhouse/: README.md  adsblol_ingestion.py  docker-compose.yml  ingest-file.sh  ingestion.sh  pyproject.toml  setup.sh  setup.sql
crates/bevy-adsb/src/: clickhouse.rs  config.rs  lib.rs  math.rs  state.rs  task_pool.rs  ui.rs  update.rs
crates/bevy-cesium/: Cargo.toml
crates/bevy-earth/: Cargo.toml
crates/bevy-earth/src/: lib.rs  system.rs
crates/bevy-flight-sim/: Cargo.toml
crates/bevy-flight-sim/src/: asset_loader.rs  flightdeck.rs  lib.rs  pfd.rs  runway.rs
crates/bevy-fly-camera/: Cargo.toml  README.md
crates/bevy-fly-camera/src/: system.rs
crates/bevy-night-sky/: Cargo.toml
crates/bevy-night-sky/src/: system.rs
crates/bevy-osm/: Cargo.toml
crates/bevy-osm/planetiler/: monaco.sh
crates/bevy-osm/src/: building.rs  cache.rs  chunk.rs  config.rs  elevation.rs  lib.rs  load_data.rs  location.rs  material.rs  mesh.rs  osm_types.rs  performance.rs  tag.rs  task_pool.rs  theme.rs  tile.rs  ui.rs  vector.rs
crates/bevy-osm/src/schema/: aeroway.rs  landcover.rs  landuse.rs  layer.rs  mod.rs  poi.rs  transportation.rs  water.rs  waterway.rs
crates/bevy-planet/: Cargo.toml
crates/bevy-planet/src/: lib.rs  material.rs  mesh.rs  mesh_cache.rs  quadtree.rs  system.rs
crates/bevy-skybox/: Cargo.toml
crates/bevy-svg/: Cargo.toml  README.md
crates/bevy-svg/src/: lib.rs  loader.rs  origin.rs  plugin.rs  svg.rs  util.rs
crates/bevy-svg/src/render/: mod.rs  plugin.rs
crates/bevy-terrain/: Cargo.toml
crates/bevy-terrain/src/: camera.rs  lib.rs  material.rs  mesh.rs  quadtree.rs  system.rs  water.rs
crates/bevy-volumetric-clouds/: Cargo.toml  README.md  system.rs
crates/bevy-volumetric-clouds/src/: compute.rs  images.rs  lib.rs  render.rs  ui.rs  uniforms.rs
crates/bevy-volumetric-clouds/src/shader_utils/: common.wgsl
crates/bevy-volumetric-clouds/src/skybox/: system.rs
crates/bevy-where-was-i/: Cargo.toml  README.md
crates/bevy-where-was-i/assets/saves/basic/: camera.state
crates/bevy-where-was-i/src/: lib.rs
examples/: adsb.rs  airbus_pfd.rs  atmosphere.rs  big_space_solar_system.rs  city.rs  clouds.rs  egui.rs  flightdeck.rs  flightsim.rs  osm.rs  planet.rs  terrain.rs  viewport_to_world.rs  water.rs
examples/where-was-i/: 3d_scene.rs  basic.rs
