[package]
name = "bevy-open-world"
description = "Various crates for open world rendering in Bevy"
repository = "https://github.com/evroon/bevy-open-world"
readme = "README.md"
version = "0.1.0"
edition = "2024"
authors = ["evroon"]
license = "MIT"
keywords = ["bevy", "serialization", "gamedev", "savegame", "plugin"]
categories = ["game-development"]
publish = false

[workspace]
members = ["crates/*"]

[features]
dev = ["bevy/dynamic_linking"]

[workspace.dependencies]
bevy = { version = "0.17.3", features = ["file_watcher", "jpeg", "bevy_mesh"] }
bevy_panorbit_camera = "0.33.1"
bevy_egui = "0.38.1"
wayland-sys = { version = "0.31.8", features = ["dlopen"] }
big_space = { version = "0.11.0" }

[dependencies]
bevy = { workspace = true }
bevy-volumetric-clouds = "0.1.5"
bevy-where-was-i = "0.3.0"
wayland-sys = { workspace = true }

[dev-dependencies]
bevy = { workspace = true }
bevy_panorbit_camera = { workspace = true }
bevy_egui = { workspace = true }
wayland-sys = { workspace = true }
big_space = { version = "0.11.0", features = ["camera"] }
turborand = "0.10.1"

bevy-adsb = { path = "crates/bevy-adsb" }
bevy-earth = { path = "crates/bevy-earth" }
bevy-night-sky = { path = "crates/bevy-night-sky" }
bevy-osm = { path = "crates/bevy-osm" }
bevy-skybox = { path = "crates/bevy-skybox" }
bevy-terrain = { path = "crates/bevy-terrain" }
