[package]
name = "bevy-open-world"
description = "Various crates for open world rendering in Bevy"
repository = "https://github.com/evroon/bevy-open-world"
readme = "README.md"
version = "0.1.0"
edition = "2024"
authors = ["evroon"]
license = "MIT"
keywords = ["bevy", "serialization", "gamedev", "savegame", "plugin"]
categories = ["game-development"]
publish = false

[workspace]
members = ["crates/*"]

# [features]
# dev = ["bevy/dynamic_linking", "bevy/file_watcher"]

[workspace.dependencies]
bevy = { version = "0.18.0", features = [
    "jpeg",
    "bevy_mesh",
    "free_camera",
    "pan_camera",
] }
bevy_panorbit_camera = "0.34.0"
bevy_egui = "0.39.0"
big_space = { version = "0.12.0" }
bevy_svg = "0.18.0"

[dependencies]
bevy = { workspace = true, features = [
    "jpeg",
    "bevy_mesh",
    "free_camera",
    "pan_camera",
] }
bevy-volumetric-clouds = { version = "0.2.0", features = ["fly_camera"] }
bevy-where-was-i = "0.4.0"
bevy_svg = { workspace = true }

[dev-dependencies]
bevy = { workspace = true, features = [
    "jpeg",
    "bevy_mesh",
    "free_camera",
    "pan_camera",
] }
bevy_panorbit_camera = { workspace = true }
bevy_egui = { workspace = true }
big_space = { workspace = true, features = ["camera"] }
# turborand = "0.10.1"

bevy-adsb = { path = "crates/bevy-adsb" }
bevy-earth = { path = "crates/bevy-earth" }
bevy-flight-sim = { path = "crates/bevy-flight-sim" }
bevy-night-sky = { path = "crates/bevy-night-sky" }
# bevy-osm = { path = "crates/bevy-osm" }
bevy-skybox = { path = "crates/bevy-skybox" }
bevy-terrain = { path = "crates/bevy-terrain" }

[lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
undocumented_unsafe_blocks = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
std_instead_of_core = "warn"
alloc_instead_of_core = "warn"
# Enable once availabe:
# doc_paragraphs_missing_punctuation = "warn"

[lints.rust]
dead_code = "warn"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"
