[package]
name = "bevy-open-world"
description = "Various crates for open world rendering in Bevy"
repository = "https://github.com/evroon/bevy-open-world"
readme = "README.md"
version = "0.1.0"
edition = "2024"
authors = ["evroon"]
license = "GPL-3.0"
keywords = ["bevy", "serialization", "gamedev", "savegame", "plugin"]
categories = ["game-development"]
exclude = [".github/workflows", "assets"]

[workspace]
members = ["crates/*"]

[features]
dev = ["bevy/dynamic_linking", "bevy/file_watcher"]

# https://github.com/Bluefinger/turborand#compiling-for-wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }

[workspace.dependencies]
bevy = { version = "0.19.0", features = [
    "jpeg",
    "bevy_mesh",
    "free_camera",
    "pan_camera",
] }
bevy_panorbit_camera = "0.35.0"
bevy_egui = "0.41.0"
bevy-where-was-i = "0.4.0"
mvt-reader = { git = "https://github.com/codeart1st/mvt-reader", rev="6de0c79ef81d77a3fdab4ea01eaa6380ac3e8b2e" }

[patch.crates-io]
bevy-where-was-i = { git = "https://github.com/evroon/bevy-where-was-i", rev = "59207671d01a5a2a726b8a287e85cc9d720fe849" }
bevy-volumetric-clouds = { git = "https://github.com/evroon/bevy-volumetric-clouds", rev = "bdedf534e866e72bc3dfa0b1f62893d621cec0fe" }

[dependencies]
bevy = { workspace = true, features = [
    "jpeg",
    "bevy_mesh",
    "free_camera",
    "pan_camera",
] }
bevy-volumetric-clouds = { version = "0.2.0", features = ["fly_camera"] }
bevy-where-was-i = { workspace = true }
ehttp = "0.6.0"
noise = "0.9.0"
geo-types = "0.7.17"
rand = "0.10.0"
lyon = "1.0.1"
lyon_tessellation = "1.0.15"
mvt-reader = { workspace = true }

[dev-dependencies]
bevy = { workspace = true, features = [
    "jpeg",
    "bevy_mesh",
    "free_camera",
    "pan_camera",
] }
bevy_panorbit_camera = { workspace = true }
bevy_egui = { workspace = true }
turborand = "0.10.1"
mvt-reader = { git = "https://github.com/codeart1st/mvt-reader", rev="6de0c79ef81d77a3fdab4ea01eaa6380ac3e8b2e" }

bevy-adsb = { path = "crates/bevy-adsb" }
bevy-earth = { path = "crates/bevy-earth" }
bevy-flight-sim = { path = "crates/bevy-flight-sim" }
bevy-night-sky = { path = "crates/bevy-night-sky" }
bevy-osm = { path = "crates/bevy-osm" }
bevy-skybox = { path = "crates/bevy-skybox" }
bevy-svg = { path = "crates/bevy-svg" }
bevy-terrain = { path = "crates/bevy-terrain" }

[lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
undocumented_unsafe_blocks = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
std_instead_of_core = "warn"
alloc_instead_of_core = "warn"
# Enable once availabe:
# doc_paragraphs_missing_punctuation = "warn"

[lints.rust]
dead_code = "warn"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"
