[package]
name = "bevy-adsb"
description = "A plugin for Bevy that renders aircraft from adsb data"
edition = "2024"

[dependencies]
bevy = { workspace = true, features = ["bevy_mesh"] }
chrono = "0.4.41"
bevy-volumetric-clouds = { version = "0.1.5", features = ["fly_camera"] }
ehttp = { version = "0.6.0", features = ["native-async"] }
url = "2.5.7"
bevy_egui = { workspace = true }

[dev-dependencies]
bevy = { workspace = true }
