[package]
name = "bevy-osm"
description = "A plugin for Bevy that renders openstreetmap geometry"
edition = "2024"

[dependencies]
bevy = { workspace = true, features = ["bevy_mesh", "webp"] }
osm-xml = "0.6.2"
lyon = "1.0.1"
lyon_tessellation = "1.0.15"
geo = "0.32.0"
geo-types = "0.7.17"
strum = "0.28.0"
strum_macros = "0.28.0"
async-std = "1.13.2"
rand = "0.10.0"
ehttp = "0.6.0"
bevy-terrain = { path = "../bevy-terrain" }
csv = "1.4.0"
serde_json = "1.0.149"
serde = "1.0.228"
bevy_egui = { workspace = true }

[dev-dependencies]
bevy = { workspace = true }
